# AI-Hackathon-Project

backend/: .env  README.md  main.py  pyproject.toml
backend/model/: prompts.py  recipe.py  step.py
client/: .env  middleware.js  package-lock.json  package.json
client/app/: actions.js  globals.css  layout.js  page.js
client/app/api/analyzeImage/: route.js
client/app/api/chat/: route.js
client/app/api/generateRecipe/: route.js
client/app/api/scrapeRecipe/: route.js
client/app/login/: actions.js
client/app/recipe/: layout.js  page.js
client/app/recipes/: page.js
client/app/register/: actions.js
client/components/: app-sidebar.jsx
client/components/home/: RecipeInputLayout.jsx
client/components/inputs/: ChatInput.jsx
client/components/providers/: query-provider.jsx
client/components/recipe/: recipe-overview.jsx  recipe-step.jsx  step-assistant.jsx
client/components/ui/: sheet.jsx
client/types/: recipe-schema.js  recipies-schema.js
