[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Manas Vegi <manasvegi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = { extras = ["standard"], version = "^0.22.0" }
# sqlalchemy = "^2.0.0"
pydantic = "^1.10.0"
databases = "^0.7.0"
openai = "^1.54.3"
supabase = "^2.10.0"
lumaai = "^1.1.0"
requests = "^2.32.3"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8080 --reload"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
